# compass

./: .gitignore  .pre-commit-config.yaml  EVALUATION.md  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  design-decisions.md  evolution.md  retrospective.md  testing.md  walkthrough.md
docs/diagrams/: d1-data-flow.mmd  d2-decision-stack.mmd  d3-learning-feedback.mmd  d4-evolution.mmd
docs/samples/: ablation-results.md  convergence.md  decision-trace.md  forensics-ring-buffer.md  goap-planner.md  learned-encounter-data.md  session-tiers.md  structured-fight-event.md
scripts/: check_import_dag.py  vulture_whitelist.py
src/brain/: __init__.py  circuit_breaker.py  completion.py  context.py  context_views.py  decision.py  flee.py  phase_modifiers.py  profiling.py  rule_def.py  scoring_phases.py  session_summary.py  transitions.py
src/compass/: __init__.py  __main__.py  runtime.py  simulator.py
src/core/: __init__.py  config_validator.py  constants.py  exceptions.py  features.py  timing.py  types.py
src/eq/: __init__.py  game_strings.py  loadout.py  placeables.py  race_data.py  s3d.py  spells.py  strings.py  wld.py  zone_chr.py  zone_ids.py
src/motor/: __init__.py  actions.py  recording.py
src/nav/: __init__.py  geometry.py  map_data.py  movement.py  pathfinding.py  stuck.py  travel_planner.py  waypoint_graph.py  zone_graph.py
src/perception/: __init__.py  _win32.py  char_reader.py  combat_eval.py  inventory_reader.py  log_parser.py  offsets.py  queries.py  reader.py  spawn_reader.py  state.py  struct_validator.py
src/routines/: __init__.py  acquire.py  base.py  buff.py  casting.py  combat.py  combat_monitor.py  combat_phases.py  death_recovery.py  engage_add.py  evade.py  feign_death.py  flee.py  memorize_spells.py  pet_combat.py  pull.py  rest.py  summon_pet.py  target_filter.py  travel.py  (+1 more)
tests/: conftest.py  factories.py  test_ablation.py  test_acquire_routine.py  test_adversarial.py  test_agent_session.py  test_analyze_session.py  test_anomaly.py  test_boundaries.py  test_brain_loop_lifecycle.py  test_brain_runner_init.py  test_brain_transitions.py  test_buff_routine.py  test_camp_selector.py  test_circuit_breaker.py  test_cli_entrypoints.py  test_clock.py  test_combat_eval.py  test_combat_routine.py  test_config_validator.py  test_context.py  test_convergence.py  test_curves.py  test_cycle_tracker.py  test_danger_memory.py  test_decision_engine.py  test_encounters.py  test_eq_assets.py  test_eq_parsers.py  test_eq_strings.py  test_exceptions.py  test_features.py  test_flee_routine.py  test_forensics.py  test_game_state.py  test_game_strings.py  test_geometry.py  test_goap_actions.py  test_goap_execution.py  test_goap_goals.py  (+83 more)
(+83 files in other folders)
