[project]
name = "compass"
version = "0.1.0"
description = "Autonomous agent architecture for complex 3D environments"
requires-python = ">= 3.14"
dependencies = []  # stdlib only -- zero runtime deps by design

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

# ── Dev dependencies (install: uv sync) ──────────────────────────────

[dependency-groups]
dev = [
    "ruff>=0.15",
    "mypy>=1.19",
    "vulture>=2.14",
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "hypothesis>=6.100",
    "pre-commit>=4.0",
    "pytest-benchmark>=5.0",
    "pytest-xdist>=3.5",
]

# ── Tool configuration ───────────────────────────────────────────────

[tool.uv]
default-groups = ["dev"]
python-preference = "system"

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "standard"
venvPath = "."
include = ["src"]
exclude = ["scripts", "data"]

[tool.ruff]
line-length = 110
target-version = "py314"

[tool.ruff.lint]
# F = pyflakes (unused imports, undefined names, redefined unused)
# E = pycodestyle errors
# W = pycodestyle warnings
# I = isort (import sorting)
# UP = pyupgrade (modern Python syntax)
# B = flake8-bugbear (common bugs)
select = ["F", "E", "W", "I", "UP", "B", "C90"]

# Ignore rules that conflict with the codebase style
ignore = [
    "E501",   # line too long (handled by formatter, not linter)
    "E741",   # ambiguous variable name (l, O, I) - used in math code
    "B006",   # mutable default argument - too many false positives with dataclasses
    "B007",   # unused loop variable - common in spawn iteration
    "UP007",  # Use X | Y for union - already using this but not everywhere
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.isort]
known-first-party = [
    "brain",
    "compass",
    "core",
    "eq",
    "motor",
    "nav",
    "perception",
    "routines",
    "runtime",
    "simulator",
    "tests",
    "util",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.14"
mypy_path = ["src"]
explicit_package_bases = true
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_defs = true


[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "live: marks tests requiring a live EQ client process",
    "assets: marks tests requiring EQ game asset files on disk",
]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
fail_under = 70
show_missing = true
skip_empty = true
